# ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ili9341.c  motor.h  partitions.csv  sdkconfig
LCD/: CMakeLists.txt  platformio.ini  sdkconfig.adafruit_feather_esp32_v2.old
LCD/include/: lv_port_disp.h  screen.h  screen_controller.h  spi_controller.h
LCD/lib/: lv_conf.h  lv_drv_conf.h
LCD/main/: CMakeLists.txt  main.c  main_backup.c
LCD/src/: ILI9341.c  lv_port_disp.c  main.cpp  screen.cpp  screen_controller.cpp  spi_controller.c
TimeServer/: README.md
WiFi/: CMakeLists.txt  READ.ME  README.md  platformio.ini  wifi.c
WiFi/include/: blink.h  wifi.h
esp32ToAwsHttp/: README.md  aws_http.h
main/: CMakeLists.txt  cafs.c  cafs.h  main.c
main/.secret/: certificates_template.h  credentials_template.h
main/aws/: CMakeLists.txt  aws_http.c  aws_http.h  certificates.h
main/fingerScanner/: README.md  debug.c  debug.h  sen14585.c  sen14585.h  sen14585_helper.c  sen14585_helper.h
main/keypad/: keypad.c  keypad.h
main/screen/: CMakeLists.txt  screen_controller.c  screen_controller.h
main/secret/: certificates_template.h  credentials_template.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
main/ui/animations/: ui_animation_helpers.c  ui_animation_helpers.h  ui_animations.c
main/ui/components/: ui_comp_hook.c
main/ui/images/: ui_img_lcd_bg2_png.c  ui_img_locked_png.c  ui_img_wifi_icon0_png.c  ui_img_wifi_icon1_png.c  ui_img_wifi_icon2_png.c  ui_img_wifi_icon3_png.c  ui_img_wifi_icon_png.c
main/ui/screens/: ui_MainScreen.c
main/utils/: CMakeLists.txt  motor.c  motor.h  ntp_time.c  ntp_time.h  pinout.h  pwm_controller.c  pwm_controller.h  realtime.c  realtime.h  system.c  system.h  wifi.c  wifi.h
(+27 files in other folders)
